ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
01/02/13 Oleh_derevenko
        * Applied patch #183 by Joseph Cooper (complementary matrix 
          calculation fix).

12/28/12 Oleh_Derevenko
        * A bug with heightfield data assigned to a wrong field in 
          dGeomHeightfieldSetHeightfieldData fixed (bug report #88 by Luc).

12/18/12 Oleh_Derevenko
        * Fixed issue with some kinds of joints (Ball, DBall, DHinge, Fixed)
          might overwrite world ERP value with their custom ERP during 
          getInfo2() call and that inappropriate value would then be passed 
          to subsequent joints in solver instead of world ERP.

12/01/12 Oleh_Derevenko
        * Fixed issues reported in patches #151 and #22 (collisions with
          SAPSpace and QuadTreeSpace might not work because geometries list
          was misused in them).
        * Applied patch #160 "IsPointInPolygon in convex.cpp returns wrong 
          results" (by Janis Rucis)

11/25/12 Oleh Derevenko
        * Configuration option --disable-threading-intf added 
          (--no-threading-intf for Windows/Premake). This allows disabling
          threading interface support (external implementations may not be 
          assigned) but eliminates dependency on OU and use of atomics in 
          steppers.

11/05/12 Oleh Derevenko
        * Fixed zero comparisons in OPCODE to use relative error instead of
          absolute epsilon value (found by Bill Sellers)

06/08/12 Daniel K. O.
        * Removed the need for defining dSINGLE/dDOUBLE; this is stored now in
          the generated ode/precision.h header.
        * Some code cleanup to get rid of GCC warnings.

05/30/12 Daniel K. O.