@@ -30,6 +30,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 #include <UnitTest++.h>
 #include <ode/ode.h>
+#include "../ode/src/config.h"
 #include "../ode/src/joints/joints.h"
 
 
